--- a/mon-projet-angular/src/app/app.component.html
+++ b/mon-projet-angular/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+
+
+<!-- <div style="text-align:center">
     <h1>
         Welcome to {{ title }}!
     </h1>
@@ -18,3 +20,18 @@
         <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
     </li>
 </ul>
+-->
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h2>Mes appareils</h2>
+            <ul class="list-group">
+                <app-appareil></app-appareil>
+                <app-appareil></app-appareil>
+                <app-appareil></app-appareil>
+            </ul>
+        </div>
+    </div>
+</div>
