--- a/mon-projet-angular/src/app/app.component.html
+++ b/mon-projet-angular/src/app/app.component.html
@@ -32,6 +32,7 @@
                 <app-appareil></app-appareil>
                 <app-appareil></app-appareil>
             </ul>
+            <button class="btn btn-success" [disabled]="!isAuth">Tout allume</button>
         </div>
     </div>
 </div>
