--- a/mon-projet-angular/src/app/app.component.html
+++ b/mon-projet-angular/src/app/app.component.html
@@ -28,11 +28,22 @@
         <div class="col-xs-12">
             <h2>Mes appareils</h2>
             <ul class="list-group">
-                <app-appareil></app-appareil>
-                <app-appareil></app-appareil>
-                <app-appareil></app-appareil>
+                <app-appareil [appareilName]="appareilOne" [appareilStatus]="'éteint'"></app-appareil>
+                <app-appareil [appareilName]="appareilTwo" [appareilStatus]="'allumé'"></app-appareil>
+                <app-appareil [appareilName]="appareilThree" [appareilStatus]="'éteint'"></app-appareil>
             </ul>
-            <button class="btn btn-success" [disabled]="!isAuth">Tout allume</button>
+            <ul class="list-group">
+
+                <app-appareil appareilName="Machine à laver"></app-appareil>
+                <app-appareil appareilName="Frigo"></app-appareil>
+                <app-appareil appareilName="Ordinateur"></app-appareil>
+                <app-appareil></app-appareil>
+
+                <app-appareil [appareilName]="appareilOne"></app-appareil>
+                <app-appareil [appareilName]="appareilTwo"></app-appareil>
+                <app-appareil [appareilName]="appareilThree"></app-appareil>
+            </ul>
+            <button class="btn btn-success" [disabled]="!isAuth" (click)="onAllumer()">Tout allume</button>
         </div>
     </div>
 </div>
