--- a/mon-projet-angular/src/app/app.component.html
+++ b/mon-projet-angular/src/app/app.component.html
@@ -27,6 +27,12 @@
     <div class="row">
         <div class="col-xs-12">
             <h2>Mes appareils</h2>
+
+            <ul class="list-group">
+                <app-appareil *ngFor="let appareil of appareils" [appareilName]="appareil.name" [appareilStatus]="appareil.status"></app-appareil>
+            </ul>
+            <h2>Mes appareils 2</h2>
+
             <ul class="list-group">
                 <app-appareil [appareilName]="appareilOne" [appareilStatus]="'éteint'"></app-appareil>
                 <app-appareil [appareilName]="appareilTwo" [appareilStatus]="'allumé'"></app-appareil>
